--- a/.github/workflows/gem-push.yml
+++ b/.github/workflows/gem-push.yml
@@ -2,31 +2,36 @@ name: Ruby Gem
 
 on:
   workflow_dispatch:
-      
+
 jobs:
   build:
     name: Build
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
+
     steps:
     - uses: actions/checkout@v2
     - name: Set up Ruby 2.7
       uses: actions/setup-ruby@v1
       with:
         ruby-version: 2.7.x
+
     - name: Build gem
       run: |
-        gem build *.gemspec  
+        gem build *.gemspec
     - name: Upload gem
       uses: actions/upload-artifact@v2
       with:
         name: idnow-client.gem
         path: "*.gem"
-        
+
   publish:
     name: Publish RubyGems
     needs: build
     runs-on: ubuntu-latest
-    steps:    
+    steps:
     - uses: actions/download-artifact@v2
       with:
         name: idnow-client.gem
@@ -35,15 +40,15 @@ jobs:
       with:
         ruby-version: 2.7.x
     - name: Publish to RubyGems
-      run: gem push *.gem        
+      run: gem push *.gem
       env:
         GEM_HOST_API_KEY: ${{secrets.RUBYGEMS_AUTH_TOKEN}}
-        
+
   publish_gpr:
     name: Publish GPR
     needs: build
     runs-on: ubuntu-latest
-    steps:    
+    steps:
     - uses: actions/download-artifact@v2
       with:
         name: idnow-client.gem
@@ -54,9 +59,9 @@ jobs:
     - name: Publish to GPR
       run: |
         mv *.gem idnow-client-2.2.0.gem
-        gem push --host https://rubygems.pkg.github.com/${OWNER} idnow-client-2.2.0.gem        
+        gem push --host https://rubygems.pkg.github.com/${OWNER} idnow-client-2.2.0.gem
       env:
         GEM_HOST_API_KEY: "Bearer ${{secrets.GITHUB_TOKEN}}"
         OWNER: ${{github.repository_owner}}
-        
-                
+
+
