--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -19,7 +19,7 @@ jobs:
           if [[ $VERSION =~ v[0-9]+\.[0-9]+\.[0-9]+ ]]; then
             echo "Valid tagname, continue release"
           else
-            echo "Invalid tagname, needs doesn't follow pattern: v<Semver>""
+            echo "Invalid tagname, needs doesn't follow pattern: v<Semver>"
             exit 1
           fi
         env:
